# dataset-composer

./: .gitignore  CHANGELOG.md  README.md  example_config.yaml  pyproject.toml
.github/workflows/: ci.yml
dataset_composer/: __init__.py  __main__.py  classifier.py  cli.py  config.py  converter.py  extractors.py  pipeline.py  reporting.py  scanner.py  state.py  unzipper.py
tests/: conftest.py  test_classifier.py  test_cli.py  test_config.py  test_converter.py  test_extractors.py  test_pipeline.py  test_reporting.py  test_scanner.py  test_state.py  test_unzipper.py
